fix: disable horizontal overflow

--- a/apps/site/src/app/(home)/sections/Landing/Landing.module.css
+++ b/apps/site/src/app/(home)/sections/Landing/Landing.module.css
@@ -6,6 +6,7 @@
 	position: relative;
 	min-height: 100vh;
 	min-width: 100vw;
+	overflow-x: hidden;
 }
 
 .landingGroup {
